INDY-442 #time 1h 15m feature: finished implementing the api finished the api docs for the same tested wiht some scenarios
